--- a/AmbientLightWeb/ambient_light_web/package.json
+++ b/AmbientLightWeb/ambient_light_web/package.json
@@ -64,9 +64,10 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -89,7 +90,8 @@
   "devDependencies": {
     "@types/react-color": "^3.0.11",
     "html-inline-css-webpack-plugin": "^1.11.2",
-    "html-inline-script-webpack-plugin": "^3.2.1"
+    "html-inline-script-webpack-plugin": "^3.2.1",
+    "react-app-rewired": "^2.2.1"
   },
   "jest": {
     "roots": [
